--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <div class="file-upload-section">
             <label for="csvFile" class="file-label">
-                📁 Cargar archivo Excel o CSV
-                <input type="file" id="csvFile" accept=".csv,.xls,.xlsx" />
+                📁 Cargar archivo(s) Excel o CSV
+                <input type="file" id="csvFile" accept=".csv,.xls,.xlsx" multiple />
             </label>
             <span id="fileName" class="file-name"></span>
         </div>
